--- a/css/estilos.css
+++ b/css/estilos.css
@@ -101,6 +101,7 @@ header .container-fluid {
 .txt {
   font-size: 1rem;
   margin: 0.5rem;
+  color: red;
 }
 
 .boton {
@@ -140,6 +141,23 @@ header .container-fluid {
   align-items: center;
 }
 .bloque img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 4px solid red;
+}
+
+.bloquec {
+  border: solid red;
+  margin: 5px;
+  padding: 2rem;
+  gap: 2rem;
+  border-radius: 4rem;
+  display: flex;
+  justify-content: column;
+  align-items: center;
+}
+.bloquec .imgca {
   width: 200px;
   height: 200px;
   border-radius: 50%;
