--- a/css/estilos.css
+++ b/css/estilos.css
@@ -31,7 +31,7 @@ header .container-fluid {
   .contenedor iframe {
     width: 100%;
   }
-  .fotoz div img {
+  .contenedor .fotoz div img {
     width: 300px;
   }
   .imgc {
@@ -136,7 +136,7 @@ header .container-fluid {
   gap: 3rem;
 }
 .infogame p {
-  color: rgb(255, 0, 0);
+  color: rgba(146, 12, 12, 0.788);
   text-align: left;
 }
 
@@ -158,7 +158,7 @@ header .container-fluid {
 }
 
 .bloquec {
-  border: solid red;
+  border: solid rgb(255, 0, 0);
   margin: 5px;
   padding: 2rem;
   gap: 2rem;
