--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -81,7 +81,7 @@
     padding-inline: 3rem;
     gap: 3rem;
     p{
-        color: rgb(255, 0, 0);
+        color: rgba(146, 12, 12, 0.788);
     text-align: left;
     }
 }
@@ -100,7 +100,7 @@
     }
 }
 .bloquec{
-    border: solid red;
+    border: solid rgb(255, 0, 0);
     margin: 5px;
     padding: 2rem;
     gap: 2rem;
