--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -74,14 +74,14 @@
     }
 }
 .infogame {
-    background: linear-gradient(rgba(255, 0, 0, 0.363),black);
+    background: linear-gradient(rgba(255, 0, 0, 0.5),black);
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     padding-inline: 3rem;
     gap: 3rem;
     p{
-        color: rgba(146, 12, 12, 0.788);
+        color: rgb(196, 8, 8);
     text-align: left;
     }
 }
