--- a/css/estilos.css
+++ b/css/estilos.css
@@ -128,7 +128,7 @@ header .container-fluid {
 }
 
 .infogame {
-  background: linear-gradient(rgba(255, 0, 0, 0.363), black);
+  background: linear-gradient(rgba(255, 0, 0, 0.5), black);
   display: grid;
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr;
@@ -136,7 +136,7 @@ header .container-fluid {
   gap: 3rem;
 }
 .infogame p {
-  color: rgba(146, 12, 12, 0.788);
+  color: rgb(196, 8, 8);
   text-align: left;
 }
 
