--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -17,7 +17,7 @@
 }
 
 .fue{
-    font-family: 'Chiller', cursive;
+    font-family: 'Roboto', sans-serif;
     
 }
 
@@ -167,7 +167,7 @@ main{
 
 }
 .zombie {
-    font-family: 'Chiller', cursive;
+    font-family: 'Roboto', sans-serif;
     font-size: 28px;
     color: rgb(247, 250, 247); /* Otra opción podría ser 'darkgreen' para un aspecto más oscuro */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -175,11 +175,13 @@ main{
     margin-left: 200px;
 }
 .par{
+    font-family: 'Roboto', sans-serif;
     text-align: center;
     color: #f1f1f1;
     font-size: 5rem;
 }
 .par2{
+    font-family: 'Roboto', sans-serif;
     text-align: center;
     color: #f1f1f1;
     text-decoration: none;
