--- a/css/estilos.css
+++ b/css/estilos.css
@@ -90,7 +90,7 @@ header .container-fluid {
 }
 
 .fue {
-  font-family: "Chiller", cursive;
+  font-family: "Roboto", sans-serif;
 }
 
 .fotoz div img {
@@ -242,7 +242,7 @@ main .wp {
 }
 
 .zombie {
-  font-family: "Chiller", cursive;
+  font-family: "Roboto", sans-serif;
   font-size: 28px;
   color: rgb(247, 250, 247); /* Otra opción podría ser 'darkgreen' para un aspecto más oscuro */
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -251,12 +251,14 @@ main .wp {
 }
 
 .par {
+  font-family: "Roboto", sans-serif;
   text-align: center;
   color: #f1f1f1;
   font-size: 5rem;
 }
 
 .par2 {
+  font-family: "Roboto", sans-serif;
   text-align: center;
   color: #f1f1f1;
   text-decoration: none;
