--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -168,7 +168,7 @@ main{
 }
 .zombie {
     font-family: 'Roboto', sans-serif;
-    font-size: 28px;
+    font-size: 2rem;
     color: rgb(247, 250, 247); /* Otra opción podría ser 'darkgreen' para un aspecto más oscuro */
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     text-align: center;
