--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -169,10 +169,10 @@ main{
 .zombie {
     font-family: 'Roboto', sans-serif;
     font-size: 2rem;
-    color: rgb(247, 250, 247); /* Otra opción podría ser 'darkgreen' para un aspecto más oscuro */
+    color: rgb(247, 250, 247); 
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     text-align: center;
-    margin-left: 200px;
+    margin-left: 90px;
 }
 .par{
     font-family: 'Roboto', sans-serif;
