--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   list-style: none;
@@ -244,10 +243,10 @@ main .wp {
 .zombie {
   font-family: "Roboto", sans-serif;
   font-size: 2rem;
-  color: rgb(247, 250, 247); /* Otra opción podría ser 'darkgreen' para un aspecto más oscuro */
+  color: rgb(247, 250, 247);
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   text-align: center;
-  margin-left: 200px;
+  margin-left: 90px;
 }
 
 .par {
