--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -69,6 +69,7 @@
 .boton {
     padding-inline: 1rem;
     border-radius: 0.5rem;
+    text-decoration: none;
 
     &:hover {
         background-color: #b22222;
