--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -70,6 +70,8 @@
     padding-inline: 1rem;
     border-radius: 0.5rem;
     text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    
 
     &:hover {
         background-color: #b22222;
