--- a/css/estilos.css
+++ b/css/estilos.css
@@ -139,11 +139,10 @@ header .container-fluid {
   border-radius: 0.5rem;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
-  color: #f1f1f1;
 }
 .boton:hover {
-  background-color: #b22222;
-  color: black;
+  background-color: #ffffff;
+  color: rgb(255, 255, 255);
 }
 .boton:active {
   background-color: #b22222;
