--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -74,8 +74,8 @@
     
 
     &:hover {
-        background-color: #b22222;
-        color: black
+        background-color: #ffffff;
+        color: rgb(255, 255, 255)
     }
 
     &:active {
