--- a/css/estilos.css
+++ b/css/estilos.css
@@ -278,6 +278,7 @@ main .wp {
   transform: translate(-50%, -50%);
 }
 .pie .buttons a {
+  text-decoration: none;
   font-size: 28px;
   width: 40px;
   height: 40px;
