--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -5,12 +5,14 @@
 
     .buttons {
         position: relative;
+       
         display: inline-block;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
 
         a {
+            text-decoration: none;
             font-size: 28px;
             width: 40px;
             height: 40px;
